fix tag issue in dek

--- a/test.ipynb
+++ b/test.ipynb
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "70c6db95",
    "metadata": {},
    "outputs": [
@@ -219,16 +219,159 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(39999, 4)\n",
-      "(25469, 4)\n"
+      "  site_prefix section_slug                                    id  slide_no  \\\n",
+      "0      ELL-JP      gourmet  a7d640ad-4f66-4e65-af78-a2362296958d         5   \n",
+      "1      ELL-JP      gourmet  994af34b-08b5-4b92-a57e-4e79e18e04ea        21   \n",
+      "2      ELL-JP      gourmet  994af34b-08b5-4b92-a57e-4e79e18e04ea        22   \n",
+      "\n",
+      "                                                 dek  \n",
+      "0  <p class=\"__auto-inserted-br__\"><br><br><br><b...  \n",
+      "1  <p><a href=\"http://www.elle.com/jp/gourmet/gou...  \n",
+      "2  <p><a href=\"https://www.elle.com/jp/gourmet/g2...  \n"
      ]
     }
    ],
    "source": [
-    "df = pd.read_csv('csvs/out_final_0.csv')\n",
-    "df_overlap =df[df['isShown'] == 1]\n",
-    "print(df.shape)\n",
-    "print(df_overlap.shape)"
+    "import os\n",
+    "import pandas as pd\n",
+    "from pathlib import Path\n",
+    "\n",
+    "\n",
+    "def read_and_concat_csvs(root_dir):\n",
+    "    # Use pathlib for recursive glob\n",
+    "    root_path = Path(root_dir)\n",
+    "    csv_files = list(root_path.rglob(\"batch_output_*.csv\"))\n",
+    "\n",
+    "    # Read and concatenate CSVs\n",
+    "    dataframes = []\n",
+    "    for file in csv_files:\n",
+    "        try:\n",
+    "            df = pd.read_csv(file)\n",
+    "            dataframes.append(df)\n",
+    "        except Exception as e:\n",
+    "            print(f\"Failed to read {file}: {e}\")\n",
+    "\n",
+    "    if dataframes:\n",
+    "        combined_df = pd.concat(dataframes, ignore_index=True)\n",
+    "        return combined_df\n",
+    "    else:\n",
+    "        print(\"No matching CSV files found.\")\n",
+    "        return None\n",
+    "\n",
+    "\n",
+    "# Example usage\n",
+    "root_folder = \"./outputs\"\n",
+    "result_df = read_and_concat_csvs(root_folder)\n",
+    "result_df.to_csv(\"output_202507141400.csv\", index=False)\n",
+    "\n",
+    "if result_df is not None:\n",
+    "    print(result_df.head(3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "b6c1d302",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11390\n",
+      "8031\n",
+      "15021\n",
+      "9934\n",
+      "9948\n",
+      "11215\n",
+      "11449\n",
+      "2039\n",
+      "12710\n",
+      "10718\n",
+      "15818\n",
+      "7941\n",
+      "14638\n",
+      "18627\n",
+      "11857\n",
+      "8754\n"
+     ]
+    }
+   ],
+   "source": [
+    "root_path = Path('./outputs')\n",
+    "csv_files = list(root_path.rglob(\"batch_output_*.csv\"))\n",
+    "\n",
+    "# Read and concatenate CSVs\n",
+    "dataframes = []\n",
+    "for file in csv_files:\n",
+    "    try:\n",
+    "        df = pd.read_csv(file)\n",
+    "        print(df.shape[0])\n",
+    "    except Exception as e:\n",
+    "        print(f\"Failed to read {file}: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "257a084d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11515\n",
+      "8031\n",
+      "15076\n",
+      "9705\n",
+      "9816\n",
+      "11013\n",
+      "11499\n",
+      "2081\n",
+      "12762\n",
+      "10777\n",
+      "15918\n",
+      "7941\n",
+      "14651\n",
+      "18634\n",
+      "11859\n",
+      "8761\n"
+     ]
+    }
+   ],
+   "source": [
+    "root_path = Path('./temp_batch')\n",
+    "csv_files = list(root_path.rglob(\"batch_output_*.csv\"))\n",
+    "\n",
+    "# Read and concatenate CSVs\n",
+    "dataframes = []\n",
+    "for file in csv_files:\n",
+    "    try:\n",
+    "        df = pd.read_csv(file)\n",
+    "        print(df.shape[0])\n",
+    "    except Exception as e:\n",
+    "        print(f\"Failed to read {file}: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "d1d4f749",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(180039, 5) (180090, 5)\n"
+     ]
+    }
+   ],
+   "source": [
+    "old = pd.read_csv('output_202507141400_latest.csv')\n",
+    "new = pd.read_csv('output_202507141400.csv')\n",
+    "print(old.shape,new.shape)"
    ]
   },
   {
@@ -252,22 +395,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "id": "707d6506",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\G6330\\AppData\\Local\\Temp\\ipykernel_41000\\850510997.py:1: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_overlap['target'] = df_overlap['info'].apply(get_target_info)\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -289,60 +420,44 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>site_prefix</th>\n",
+       "      <th>section_slug</th>\n",
        "      <th>id</th>\n",
-       "      <th>url</th>\n",
-       "      <th>isShown</th>\n",
-       "      <th>info</th>\n",
-       "      <th>target</th>\n",
+       "      <th>slide_no</th>\n",
+       "      <th>dek</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>6ebaba86-9c57-4842-a82b-db08fbb283f2</td>\n",
-       "      <td>https://www.elle.com/jp/culture/celebgossip/g4...</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>[{\"id\":\"slide-1\",\"total\":849.8624877929688,\"sp...</td>\n",
-       "      <td>[{'index': 2, 'diff': 322}, {'index': 3, 'diff...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>5ed5e05c-7010-4596-afec-1c409fb20d64</td>\n",
-       "      <td>https://www.elle.com/jp/decor/decor-interior-d...</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>[{\"id\":\"slide-1\",\"total\":542.1000366210938,\"sp...</td>\n",
-       "      <td>[{'index': 1, 'diff': 198}, {'index': 7, 'diff...</td>\n",
+       "      <th>10324</th>\n",
+       "      <td>ESQ-JP</td>\n",
+       "      <td>fashion</td>\n",
+       "      <td>ee00dcf2-5db0-49eb-a0d0-91159604f711</td>\n",
+       "      <td>5</td>\n",
+       "      <td>&lt;p&gt;\\r\\n 　ボンバージャケットは全7種、ブラック、ネイビー、グレイ、カーキ、ブラウン、...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                     id  \\\n",
-       "0  6ebaba86-9c57-4842-a82b-db08fbb283f2   \n",
-       "1  5ed5e05c-7010-4596-afec-1c409fb20d64   \n",
+       "      site_prefix section_slug                                    id  \\\n",
+       "10324      ESQ-JP      fashion  ee00dcf2-5db0-49eb-a0d0-91159604f711   \n",
        "\n",
-       "                                                 url  isShown  \\\n",
-       "0  https://www.elle.com/jp/culture/celebgossip/g4...      1.0   \n",
-       "1  https://www.elle.com/jp/decor/decor-interior-d...      1.0   \n",
-       "\n",
-       "                                                info  \\\n",
-       "0  [{\"id\":\"slide-1\",\"total\":849.8624877929688,\"sp...   \n",
-       "1  [{\"id\":\"slide-1\",\"total\":542.1000366210938,\"sp...   \n",
-       "\n",
-       "                                              target  \n",
-       "0  [{'index': 2, 'diff': 322}, {'index': 3, 'diff...  \n",
-       "1  [{'index': 1, 'diff': 198}, {'index': 7, 'diff...  "
+       "       slide_no                                                dek  \n",
+       "10324         5  <p>\\r\\n 　ボンバージャケットは全7種、ブラック、ネイビー、グレイ、カーキ、ブラウン、...  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_overlap['target'] = df_overlap['info'].apply(get_target_info)\n",
-    "df_overlap.head(2)"
+    "import pandas as pd\n",
+    "test = pd.read_csv('batch_output_8.csv', encoding='utf8')\n",
+    "temp = test[(test['id'] == 'ee00dcf2-5db0-49eb-a0d0-91159604f711') & (test['slide_no'] == 5)]\n",
+    "temp"
    ]
   },
   {
@@ -1756,35 +1871,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "cab88248",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Request failed: 403 Client Error: Forbidden for url: http://35.213.67.93/get-sos\n"
+     "ename": "ImportError",
+     "evalue": "cannot import name 'get_height' from 'cron_sos_check.batch_process' (c:\\work\\projects\\ads_detect\\cron_sos_check\\batch_process.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mImportError\u001b[39m                               Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[10]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mrequests\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mcron_sos_check\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mbatch_process\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m get_height\n\u001b[32m      4\u001b[39m url = \u001b[33m\"\u001b[39m\u001b[33mhttp://35.213.67.93/get-sos\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m      5\u001b[39m \u001b[38;5;66;03m# elastic search / csv / basic authentation\u001b[39;00m\n\u001b[32m      6\u001b[39m \u001b[38;5;66;03m# username = \"55oshie-ru\"\u001b[39;00m\n\u001b[32m      7\u001b[39m \u001b[38;5;66;03m# password = \"log4me\"\u001b[39;00m\n",
+      "\u001b[31mImportError\u001b[39m: cannot import name 'get_height' from 'cron_sos_check.batch_process' (c:\\work\\projects\\ads_detect\\cron_sos_check\\batch_process.py)"
      ]
     }
    ],
    "source": [
     "import requests\n",
+    "from cron_sos_check.batch_process import get_height\n",
     "\n",
     "url = \"http://35.213.67.93/get-sos\"\n",
     "# elastic search / csv / basic authentation\n",
-    "username = \"55oshie-ru\"\n",
-    "password = \"log4me\"\n",
+    "# username = \"55oshie-ru\"\n",
+    "# password = \"log4me\"\n",
     "\n",
+    "x_api_key = '7dbe5f653a2b'\n",
+    "headers = {\n",
+    "    'x-api-key': x_api_key,\n",
+    "}\n",
     "# header \n",
     "#.env API_KEY\n",
-    "x-api-key = '7dbe5f'\n",
     "\n",
     "try:\n",
-    "    response = requests.post(url, auth=(username, password))\n",
+    "    # response = requests.post(url, auth=(username, password))\n",
+    "    response = requests.post(url, headers=headers)\n",
     "    response.raise_for_status()  # Raise an error for bad responses (4xx/5xx)\n",
     "    data = response.json()  # Parse JSON response\n",
-    "    print(\"Response JSON:\\n\", data)\n",
+    "    print(f'response ----- {response.headers}')\n",
+    "    print(\"Keys:\", list(data.keys()))\n",
+    "    get_height(data=data)\n",
     "except requests.exceptions.RequestException as e:\n",
     "    print(\"Request failed:\", e)\n",
     "except ValueError:\n",
@@ -1793,8 +1919,212 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "75688f2b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(180090, 5) (13, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "pd_origin = pd.read_csv('output_202507141400_ori.csv',encoding='utf-8')\n",
+    "pd_sp = pd.read_csv('listicle_sponsor.csv',encoding='utf-8')\n",
+    "pd_sponsor = pd_sp[pd_sp['sponsor'] == True]\n",
+    "pd_sponsor.to_csv('sponsors.csv',encoding='utf-8',index=False)\n",
+    "# filtered_df_2 = pd_origin[~pd_origin['id'].isin(pd_sponsor['mos_id'])]\n",
+    "# filtered_df_2.to_csv('output_202507141400.csv',encoding='utf-8',index=False)\n",
+    "print(pd_origin.shape, pd_sponsor.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "8f1e3a53",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(180059, 5)\n",
+      "(76738, 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "output = pd.read_csv(\"output_202507141400_ori.csv\", encoding=\"utf-8\")\n",
+    "df_list = pd.read_csv('listicle_result.csv',encoding='utf-8')\n",
+    "print(output.shape)\n",
+    "print(df_list.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "13c19812",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(180059, 6)\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_merged = output.merge(df_list[['mos_id', 'url']], left_on='id', right_on='mos_id', how='left')\n",
+    "# Drop the helper column 'mos_id' (optional)\n",
+    "df_merged = df_merged.drop(columns=['mos_id'])\n",
+    "\n",
+    "print(df_merged.shape)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "8fd7c2bc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_merged.to_csv(\"output_202507141400.csv\", encoding=\"utf-8\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "7b1520d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(180059, 6)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_merged.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "0f930cc9",
+   "id": "77aa9e24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def check_tag(description_html):\n",
+    "    escaped_html = description_html.replace(\"`\", \"\\\\`\")\n",
+    "    match = re.search(r'<div class=\"inner-wrapper\">\\s*<([a-zA-Z0-9]+)', escaped_html)\n",
+    "    if match:\n",
+    "        tag = match.group(1)\n",
+    "        if tag == 'p':\n",
+    "            pass\n",
+    "        else:\n",
+    "            print(\"First tag:\", match.group(1))\n",
+    "            print(f'html --- {escaped_html}')\n",
+    "    else:\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "0af2a301",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(180059, 6)\n",
+      "(3754, 6)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "data = pd.read_csv('output_202507141400.csv',encoding='utf-8')\n",
+    "print(data.shape)\n",
+    "un_p = data[~data['dek'].str.startswith('<p')]\n",
+    "print(un_p.shape)\n",
+    "un_p.to_csv('out_un_p_tag.csv',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "9384460b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Combined 16 CSV files\n",
+      "  site_prefix section_slug                                    id  slide_no  \\\n",
+      "0      ELL-JP      culture  e3cbb7b4-bbd6-4ff0-b60b-229b31813b92         3   \n",
+      "1      ELL-JP      culture  e3cbb7b4-bbd6-4ff0-b60b-229b31813b92         5   \n",
+      "2      ELL-JP      culture  e3cbb7b4-bbd6-4ff0-b60b-229b31813b92         6   \n",
+      "3      ELL-JP      culture  e3cbb7b4-bbd6-4ff0-b60b-229b31813b92         7   \n",
+      "4      ELL-JP      culture  e3cbb7b4-bbd6-4ff0-b60b-229b31813b92         8   \n",
+      "\n",
+      "                                                 dek  \n",
+      "0  <p>また、時代は“繰り返すもの”ともいわれる通り、万物には周期性があります。ぜひ、あなたの...  \n",
+      "1  <h2><strong>伏見稲荷大社【京都】</strong></h2><p>「五穀豊穣」の...  \n",
+      "2  <p>また、こちらのおみくじは大大吉！　とかも珍しいものなので、参拝時に今年の運試しにぜひト...  \n",
+      "3  <h2><strong>箱根神社・九頭龍神社【神奈川】</strong></h2><p>箱根...  \n",
+      "4  <p>龍神様は“動くもの”に喜んで力を貸してくださる神様ですので、23年、勝負をかけたい！　...  \n",
+      "(5020, 5)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import glob\n",
+    "import os\n",
+    "\n",
+    "# Path to the directory\n",
+    "directory = \"temp_batch\"\n",
+    "\n",
+    "# Pattern to match files like batch_1.csv, batch_2.csv, etc.\n",
+    "pattern = os.path.join(directory, \"batch_*.csv\")\n",
+    "\n",
+    "# Get all matching file paths\n",
+    "csv_files = glob.glob(pattern)\n",
+    "\n",
+    "# Read and combine them\n",
+    "dfs = []\n",
+    "for file in csv_files:\n",
+    "    df = pd.read_csv(file)\n",
+    "    dfs.append(df)\n",
+    "\n",
+    "# Concatenate into one DataFrame\n",
+    "combined_df = pd.concat(dfs, ignore_index=True)\n",
+    "\n",
+    "print(f\"Combined {len(csv_files)} CSV files\")\n",
+    "print(combined_df.head())\n",
+    "combined_df.to_csv('fix_tag_202507141400.csv',index=False)\n",
+    "print(combined_df.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4db3a0de",
    "metadata": {},
    "outputs": [],
    "source": []
